<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createChatButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chat.ChatFragment">

    <Button
        android:id="@+id/navigateCreateChat"
        android:layout_width="120dp"
        android:layout_height="66dp"
        android:layout_marginEnd="16dp"
        android:text="CREATE"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="121dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Chat"
        android:textColor="#000000"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/chatViewPager"
        android:layout_width="409dp"
        android:layout_height="540dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatTabLayout" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/chatTabLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/privateChatTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Private" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/publicChatTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Public" />

    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>