<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.ProfileView">

    <Button
        android:id="@+id/friendsList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Friends List" />
</FrameLayout>